Fixed standards, spaces removed unused class

--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,8 @@
 	"keywords": ["php", "php7", "Filesystem"],
 	"author": [
 		{
-			"name": "PhoxPHP",
-			"email": "admin@phoxphp.com"
+			"name": "Peter Taiwo",
+			"email": "taiwopeter35@gmail.com"
 		}
 	],
 	"require": {
