Updated filemanager and directorymanager instances

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
 	"author": [
 		{
 			"name": "Peter Taiwo",
-			"email": "taiwopeter35@gmail.com"
+			"email": "taiwop3@gmail.com"
 		}
 	],
 	"require": {
